tests/neg-custom-args/captures/unsound-reach-4.check
-- Error: tests/neg-custom-args/captures/unsound-reach-4.scala:22:22 ---------------------------------------------------
22 |    escaped = boom.use(f)  // error
   |              ^^^^^^^^^^^
   |              Local reach capability backdoor* leaks into capture scope of method bad
